tests/test_default/bad/empty.catala
## Article

```catala
new scope A:
  param x content int
  param y content bool

scope A:
  def x := 1
```
